# wing

./: AGENTS.md  LICENSE  README.md  environment.yml  pl.md  plan.md  pyproject.toml
.codex/: config.toml
.github/codex/prompts/: implement-next-milestone.md
.github/workflows/: codex-implement.yml
docs/: environment_setup.md  spec.md  strut_wing_box_guide.md
openmdao/constraints/: openmdao_constraint.py
scripts/: install_env.sh  install_environment.sh
src/: constraints.py  tacs_mphys_cantilever.py
src/wing_trade_study/: __init__.py
src/wing_trade_study/cli/: __init__.py  main.py
tests/integration/: test_environment_smoke.py
weight_estimation/: turbofan_22k.csv
wing_trade_study/: __init__.py
